--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<
+
 <!DOCTYPE html>
 <html lang ="en">
 
@@ -7,9 +7,11 @@
     <title>Sudoku Solver</title>
     <link rel="stylesheet" href="styles.css"
 </head>
-
 <body>
+    <!-- where we want the sudoku puzzle to be populated -->
     <div id = "puzzle"></div>
+    <!-- button to hit solve -->
+    <button id = "solve-button">Solve</button>
 
 
 
