--- a/index.html
+++ b/index.html
@@ -2,20 +2,25 @@
 <!DOCTYPE html>
 <html lang ="en">
 
-<head>
+<head> 
     <meta charset="UTF-8">
     <title>Sudoku Solver</title>
     <link rel="stylesheet" href="styles.css"
 </head>
+   
+
 <body>
     <!-- where we want the sudoku puzzle to be populated -->
     <div id = "puzzle"></div>
+   
     <!-- button to hit solve -->
     <button id = "solve-button">Solve</button>
-
-
-
-<script src = "app.js"></script>
+    
+    <!-- axios package -->
+    <script src="http://unpkg.com/axios/dist/axios.min.js"></script>
+    
+    <!-- connects js file -->
+    <script src = "app.js"></script>
 
 </body>
 </html>
