--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <!-- button to hit solve -->
     <button id = "solve-button">Solve</button>
     
+    <p id="solution"></p>
+
     <!-- axios package -->
     <script src="http://unpkg.com/axios/dist/axios.min.js"></script>
     
