updated css and html(attempted to center)

--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
    
 
 <body>
+
+    <h1 class="title-style">Sudoku Solver</h1>
+
     <!-- where we want the sudoku puzzle to be populated -->
     <div id = "puzzle"></div>
    
     <!-- button to hit solve -->
-    <button id = "solve-button">Solve</button>
+    <button id ="solve-button">Solve</button>
     
     <p id="solution"></p>
 
